add accessory to lowinventory